fix ru localization

--- a/src/VirtoCommerce.CatalogModule.Web/Localizations/ru.VirtoCommerce.Catalog.json
+++ b/src/VirtoCommerce.CatalogModule.Web/Localizations/ru.VirtoCommerce.Catalog.json
@@ -211,7 +211,7 @@
           "modified": "(изменен)",
           "add-filter": "Фильтр",
           "reset-filter": "Сбросить фильтр",
-          "excluded": "Имущество, исключенное из наследства",
+          "excluded": "Свойства исключенные из наследования",
           "hide-empty-values": "Скрывать пустые поля",
           "show-empty-values": "Показывать пустые поля"
         },
@@ -392,7 +392,7 @@
           "select-language": "Выбрать язык"
         },
         "placeholders": {
-          "type": "Выберать тип",
+          "type": "Выбрать тип",
           "language": "Выбрать язык"
         }
       },
@@ -439,7 +439,7 @@
           "name": "Введите имя",
           "image-category": "Выбрать...",
           "language": "Выберите язык",
-          "altText": "Введете текст",
+          "altText": "Введите текст",
           "description": "Введите описание"
         },
         "descr": {
@@ -815,11 +815,11 @@
         "message": "Язык был изменен. Вы хотите сохранить изменения?"
       },
       "bill-or-materials-associations-delete": {
-        "title": "Подвтердите удаление",
+        "title": "Подтвердите удаление",
         "message": "Вы уверены, что хотите удалить выбранные продукты?"
       },
       "links-delete": {
-        "title": "Подвтердите удаление",
+        "title": "Подтвердите удаление",
         "message": "Вы уверены, что хотите удалить выбранные ссылки?"
       }
     },
